--- a/index.html
+++ b/index.html
@@ -26,17 +26,33 @@ layout: default
         {% if post.fullview %}
             {{ post.content }}
         {% else %}
-            {% if post.shortinfo %}
-                {{ post.shortinfo }}
-            {% elsif post.description %}
-                {{ post.description }}
-            {% else %}
-                {{ post.excerpt }}
-            {% endif %}
+            {{ post.excerpt }}
         {% endif %}
     </div>
 
 </article>
 {% endfor %}
+<hr/>
 
-{% include pager.html %}
+<ul class="pager">
+
+    {% if paginator.previous_page %}
+    <li class="previous">
+        <a href="{{ site.site_url }}/{{ site.paginate_path | replace: ':num', paginator.previous_page }}">
+            <i class="fa fa-chevron-left fa-2x"></i>
+        </a>
+    </li>
+    {% endif %}
+
+    <li>
+        <span class="page_number">{{ paginator.page }} of {{ paginator.total_pages }}</span>
+    </li>
+
+    {% if paginator.next_page %}
+    <li class="next">
+        <a href="{{ site.site_url }}/{{ site.paginate_path | replace: ':num', paginator.next_page }}">
+            <i class="fa fa-chevron-right fa-2x"></i>
+        </a>
+    </li>
+    {% endif %}
+</ul>
