--- a/404.html
+++ b/404.html
@@ -3,13 +3,14 @@ layout: page
 title: 404 - not found
 ---
 
-<h3>This is not the page you are looking for...</h3>h3>
+<h3>This is not the page you are looking for...</h3>
 
+<br/>
 <hr/>
 
 <ul class="pager">
     <li class="previous">
-        <a href="{{ site.BASE_PATH }}" title="{{ site.title }}">
+        <a href="{{ site.url }}" title="{{ site.title }}">
             <i class="fa fa-chevron-left" style='margin-right: 10px;'></i> Home
         </a>
     </li>
