--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: default
     </span>
 
     <h2>
-        <a href="{{ site.BASE_PATH }}{{ post.url }}">{{ post.title }}</a>
+        <a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
     </h2>
 
     <div>
@@ -34,7 +34,7 @@ layout: default
 
     {% if paginator.previous_page %}
     <li class="previous">
-        <a href="{{ site.BASE_PATH }}/{{ site.paginate_path | replace: ':num', paginator.previous_page }}">
+        <a href="{{ site.url }}/{{ site.paginate_path | replace: ':num', paginator.previous_page }}">
             <i class="fa fa-chevron-left fa-2x"></i>
         </a>
     </li>
@@ -46,7 +46,7 @@ layout: default
 
     {% if paginator.next_page %}
     <li class="next">
-        <a href="{{ site.BASE_PATH }}/{{ site.paginate_path | replace: ':num', paginator.next_page }}">
+        <a href="{{ site.url }}/{{ site.paginate_path | replace: ':num', paginator.next_page }}">
             <i class="fa fa-chevron-right fa-2x"></i>
         </a>
     </li>
