--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ layout: default
 
     {% if paginator.previous_page %}
     <li class="previous">
-        <a href="{{ site.url }}/{{ site.paginate_path | replace: ':num', paginator.previous_page }}">
+        <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">
             <i class="fa fa-chevron-left fa-2x"></i>
         </a>
     </li>
@@ -46,7 +46,7 @@ layout: default
 
     {% if paginator.next_page %}
     <li class="next">
-        <a href="{{ site.url }}/{{ site.paginate_path | replace: ':num', paginator.next_page }}">
+        <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">
             <i class="fa fa-chevron-right fa-2x"></i>
         </a>
     </li>
