Handle pagination page1 exception.

--- a/404.html
+++ b/404.html
@@ -10,8 +10,8 @@ title: 404 - not found
 
 <ul class="pager">
     <li class="previous">
-        <a href="{{ site.url }}" title="{{ site.title }}">
-            <i class="fa fa-chevron-left" style='margin-right: 10px;'></i> Home
+        <a href="{{ site.baseurl }}" title="{{ site.title }}">
+            <i class="fa fa-fw fa-chevron-left" style='margin-right: 10px;'></i>Home
         </a>
     </li>
 </ul>
