--- a/index.html
+++ b/index.html
@@ -34,9 +34,15 @@ layout: default
 
     {% if paginator.previous_page %}
     <li class="previous">
-        <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">
-            <i class="fa fa-chevron-left fa-2x"></i>
+        {% paginator.page == 2 %}
+        <a href="{{ site.baseurl }}">
+            <i class="fa fa-fw fa-chevron-left fa-2x"></i>
         </a>
+        {% else %}
+        <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">
+            <i class="fa fa-fw fa-chevron-left fa-2x"></i>
+        </a>
+        {% endif %}
     </li>
     {% endif %}
 
@@ -47,7 +53,7 @@ layout: default
     {% if paginator.next_page %}
     <li class="next">
         <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">
-            <i class="fa fa-chevron-right fa-2x"></i>
+            <i class="fa fa-fw fa-chevron-right fa-2x"></i>
         </a>
     </li>
     {% endif %}
