--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: default
         {{ post.excerpt }}
     </div>
 
-    <a href="{{ site.baseurl }}{{ post.url }}#disqus_thread">{{ post.title }}
+    <a href="{{ site.baseurl }}{{ post.url }}#disqus_thread">{{ post.title }}</a>
 </article>
 {% endfor %}
 <hr/>
