--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@ layout: default
         {{ post.excerpt }}
     </div>
 
-    <a href="{{ site.baseurl }}{{ post.url }}#disqus_thread">{{ post.title }}</a>
+    <br/>
+    <span><i class="fa fa-fw fa-comment"></i><a href="{{ site.baseurl }}{{ post.url }}#disqus_thread">&nbsp;</a></span>
+
 </article>
 {% endfor %}
 <hr/>
