Improve default comment view.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ layout: default
     </div>
 
     <br/>
-    <span><i class="fa fa-fw fa-comment"></i><a href="{{ site.baseurl }}{{ post.url }}#disqus_thread">&nbsp;</a></span>
+    <span><i class="fa fa-fw fa-comment"></i>&nbsp;<a href="{{ site.baseurl }}{{ post.url }}#disqus_thread">-</a></span>
 
 </article>
 {% endfor %}
