Change link colours and improve comment inline formatting.

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@ layout: default
         {{ post.excerpt }}
     </div>
 
-    <br/>
-    <span><i class="fa fa-fw fa-comment"></i>&nbsp;<a href="{{ site.baseurl }}{{ post.url }}#disqus_thread">-</a></span>
+    <span><i class="fa fa-fw fa-comment"></i>&nbsp;&nbsp;<strong><a href="{{ site.baseurl }}{{ post.url }}#disqus_thread">-</a></strong></span>
 
 </article>
 {% endfor %}
