Revert config to using the url variable instead of baseurl.

--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@ title: 404 - not found
 
 <ul class="pager">
     <li class="previous">
-        <a href="{{ site.baseurl }}" title="{{ site.title }}">
+        <a href="{{ site.url }}" title="{{ site.title }}">
             <i class="fa fa-fw fa-chevron-left" style='margin-right: 10px;'></i>Home
         </a>
     </li>
